source/blender/freestyle/intern/application/Controller.cpp
@@ -927,6 +927,12 @@ void Controller::InsertStyleModule(unsigned index, const char *iFileName)
 	_Canvas->InsertStyleModule(index, sm);
 }
 
+void Controller::InsertStyleModule(unsigned index, const char *iName, const char *iBuffer)
+{
+	StyleModule *sm = new BufferedStyleModule(iBuffer, iName, _inter);
+	_Canvas->InsertStyleModule(index, sm);
+}
+
 void Controller::InsertStyleModule(unsigned index, const char *iName, struct Text *iText)
 {
 	StyleModule *sm = new BlenderStyleModule(iText, iName, _inter);
