source/blender/freestyle/intern/application/Controller.h
@@ -90,6 +90,7 @@ public:
 	Render *RenderStrokes(Render *re, bool render);
 	void SwapStyleModules(unsigned i1, unsigned i2);
 	void InsertStyleModule(unsigned index, const char *iFileName);
+	void InsertStyleModule(unsigned index, const char *iName, const char *iBuffer);
 	void InsertStyleModule(unsigned index, const char *iName, struct Text *iText);
 	void AddStyleModule(const char *iFileName);
 	void RemoveStyleModule(unsigned index);
