source/blender/freestyle/intern/blender_interface/BlenderStyleModule.h
@@ -36,6 +36,34 @@ struct Text;
 
 namespace Freestyle {
 
+class BufferedStyleModule : public StyleModule
+{
+public:
+	BufferedStyleModule(const string& buffer, const string& file_name, Interpreter *inter) : StyleModule(file_name, inter)
+	{
+		_buffer = buffer;
+	}
+
+	virtual ~BufferedStyleModule()
+	{
+	}
+
+protected:
+	virtual int interpret()
+	{
+		PythonInterpreter *py_inter = dynamic_cast<PythonInterpreter*>(_inter);
+		BLI_assert(py_inter != 0);
+		return py_inter->interpretString(_buffer, getFileName());
+	}
+
+private:
+	string _buffer;
+
+#ifdef WITH_CXX_GUARDEDALLOC
+	MEM_CXX_CLASS_ALLOC_FUNCS("Freestyle:BufferedStyleModule")
+#endif
+};
+
 class BlenderStyleModule : public StyleModule
 {
 public:
@@ -62,7 +90,6 @@ private:
 #ifdef WITH_CXX_GUARDEDALLOC
 	MEM_CXX_CLASS_ALLOC_FUNCS("Freestyle:BlenderStyleModule")
 #endif
-
 };
 
 } /* namespace Freestyle */
